[gd_scene load_steps=5 format=2]

[ext_resource path="res://Map.gd" type="Script" id=1]
[ext_resource path="res://UI/theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/thumbnails/metal.png" type="Texture" id=3]
[ext_resource path="res://Assets/thumbnails/arrow.png" type="Texture" id=4]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="Tiles" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="BuildMenu" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.631373 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -58.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BuildMenu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 53.0
margin_bottom = 284.0
custom_constants/separation = 36
alignment = 1

[node name="SaveBtn" type="Button" parent="UI/BuildMenu/VBoxContainer"]
margin_right = 48.0
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Save"

[node name="LoadBtn" type="Button" parent="UI/BuildMenu/VBoxContainer"]
margin_top = 63.0
margin_right = 48.0
margin_bottom = 90.0
theme = ExtResource( 2 )
text = "Load"

[node name="TileSelect" type="OptionButton" parent="UI/BuildMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 126.0
margin_right = 48.0
margin_bottom = 153.0
theme = ExtResource( 2 )

[node name="PlaceBtn" type="Button" parent="UI/BuildMenu/VBoxContainer"]
margin_top = 189.0
margin_right = 48.4375
margin_bottom = 216.0
theme = ExtResource( 2 )
text = "Place"

[node name="WipeBtn" type="Button" parent="UI/BuildMenu/VBoxContainer"]
margin_top = 252.0
margin_right = 48.0
margin_bottom = 279.0
theme = ExtResource( 2 )
text = "Wipe"

[node name="GameMenu" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -37.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="HBoxContainer" parent="UI/GameMenu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 507.0
margin_bottom = 32.0

[node name="Money" type="Label" parent="UI/GameMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 5.0
margin_right = 31.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.0941176, 0.45098, 0.0627451, 1 )
text = "$507"

[node name="VSeparator2" type="VSeparator" parent="UI/GameMenu/VBoxContainer"]
margin_left = 35.0
margin_right = 39.0
margin_bottom = 27.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameMenu/VBoxContainer"]
margin_left = 43.0
margin_right = 87.0
margin_bottom = 27.0

[node name="TextureRect" type="TextureRect" parent="UI/GameMenu/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 27.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Metal" type="Label" parent="UI/GameMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.756863, 0.756863, 0.756863, 1 )
text = "219"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="UI/GameMenu/VBoxContainer"]
margin_left = 91.0
margin_right = 95.0
margin_bottom = 27.0

[node name="ArrowBtn" type="Button" parent="UI/GameMenu/VBoxContainer"]
margin_left = 99.0
margin_right = 139.0
margin_bottom = 27.0
rect_min_size = Vector2( 40, 0 )
custom_colors/font_color = Color( 0.968627, 0.968627, 0.968627, 1 )
text = "$5"
icon = ExtResource( 4 )
align = 0
icon_align = 2
expand_icon = true

[node name="Menu" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -72.0
margin_right = 144.0
margin_bottom = 72.0
rect_min_size = Vector2( 288, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="UI/Menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 283.0
margin_bottom = 139.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu/CenterContainer"]
margin_left = 99.0
margin_top = 28.0
margin_right = 178.0
margin_bottom = 106.0
custom_constants/separation = 24

[node name="MainMenuBtn" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
margin_right = 79.1875
margin_bottom = 27.0
text = "Main Menu"

[node name="ContinueBtn" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 79.0
margin_bottom = 78.0
text = "Continue"

[connection signal="pressed" from="UI/BuildMenu/VBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="UI/BuildMenu/VBoxContainer/LoadBtn" to="." method="_on_LoadBtn_pressed"]
[connection signal="pressed" from="UI/BuildMenu/VBoxContainer/PlaceBtn" to="." method="_on_PlaceBtn_pressed"]
[connection signal="pressed" from="UI/BuildMenu/VBoxContainer/WipeBtn" to="." method="_on_WipeBtn_pressed"]
[connection signal="pressed" from="UI/GameMenu/VBoxContainer/ArrowBtn" to="." method="_on_ArrowBtn_pressed"]
